#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(luabind, 0.9.0, BUG-REPORT-ADDRESS)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/class.cpp])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_C_RESTRICT
AC_TYPE_SIZE_T
AC_C_VOLATILE
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_HEADER_STDC
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile
                 examples/Makefile
                 examples/any_converter/Makefile
                 examples/filesystem/Makefile
                 examples/glut/Makefile
                 examples/hello_world/Makefile
                 examples/intrusive_ptr/Makefile
                 examples/regexp/Makefile
                 luabind/Makefile
                 src/Makefile
                 test/Makefile])
AC_OUTPUT