libluabind_includedir = $(includedir)/luabind
libluabind_include_HEADERS = \
    adopt_policy.hpp \
    get_main_thread.hpp \
    raw_policy.hpp \
    back_reference.hpp \
    get_pointer.hpp \
    return_reference_to_policy.hpp \
    back_reference_fwd.hpp \
    handle.hpp \
    scope.hpp \
    class.hpp \
    iterator_policy.hpp \
    shared_ptr_converter.hpp \
    class_info.hpp \
    lua_include.hpp \
    tag_function.hpp \
    config.hpp \
    luabind.hpp \
    typeid.hpp \
    container_policy.hpp \
    make_function.hpp \
    value_wrapper.hpp \
    copy_policy.hpp \
    nil.hpp \
    vector.hpp \
    dependency_policy.hpp \
    no_dependency.hpp \
    version.hpp \
    discard_result_policy.hpp \
    object.hpp \
    weak_ref.hpp \
    error.hpp \
    open.hpp \
    wrapper_base.hpp \
    exception_handler.hpp \
    operator.hpp \
    yield_policy.hpp \
    from_stack.hpp \
    out_value_policy.hpp \
    function.hpp \
    prefix.hpp

libluabind_detail_includedir = $(includedir)/luabind/detail
libluabind_detail_include_HEADERS = \
    detail/call.hpp \
    detail/enum_maker.hpp \
    detail/other.hpp \
    detail/call_0x.hpp \
    detail/format_signature.hpp \
    detail/pcall.hpp \
    detail/call_function.hpp \
    detail/garbage_collector.hpp \
    detail/pointee_sizeof.hpp \
    detail/call_member.hpp \
    detail/has_get_pointer.hpp \
    detail/pointee_typeid.hpp \
    detail/call_operator_iterate.hpp \
    detail/inheritance.hpp \
    detail/policy.hpp \
    detail/class_registry.hpp \
    detail/instance_holder.hpp \
    detail/primitives.hpp \
    detail/class_rep.hpp \
    detail/link_compatibility.hpp \
    detail/property.hpp \
    detail/constructor.hpp \
    detail/make_instance.hpp \
    detail/ref.hpp \
    detail/conversion_storage.hpp \
    detail/most_derived.hpp \
    detail/signature_match.hpp \
    detail/convert_to_lua.hpp \
    detail/object_call.hpp \
    detail/stack_utils.hpp \
    detail/debug.hpp \
    detail/object_rep.hpp \
    detail/typetraits.hpp \
    detail/decorate_type.hpp \
    detail/open.hpp \
    detail/yes_no.hpp \
    detail/deduce_signature.hpp \
    detail/operator_id.hpp
