lib_LTLIBRARIES = libluabind.la
libluabind_includedir = $(includedir)/luabind

libluabind_include_HEADERS =

libluabind_la_SOURCES = class.cpp class_info.cpp class_registry.cpp class_rep.cpp create_class.cpp error.cpp exception_handler.cpp function.cpp inheritance.cpp link_compatibility.cpp object_rep.cpp open.cpp pcall.cpp scope.cpp stack_content_by_name.cpp weak_ref.cpp wrapper_base.cpp
